# desktop-ai-companion

./: .gitignore  ARCHITECTURE.md  Live2D 角色使用说明.md  README.md  README_NEW_ARCH.md  build-backend.ps1  launch-tauri.ps1  live2d_viewer.html  pyproject.toml  requirements.txt  run-tauri.ps1  run.py  show_texture.py  soul.md  test_display.py  使用说明.md  快速开始.md  测试角色显示.py  角色使用说明.md  项目总结.md
.agents/: product-marketing-context.md
app/: __init__.py  config.py  db.py  main.py
assets/: .gitkeep  generate_characters.py
backend/: auth_utils.py  business_store.py  provider_services.py  requirements.txt  server.py
data/: .gitkeep
docs/: speech-runtime-windows.md
tauri-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: main.rs
tests/: test_backend_api.py  test_backend_entrypoint.py  test_companion_chat_api.py  test_companion_profiles_api.py  test_config_paths.py  test_memory_api.py  test_memory_prompt_assembly.py  test_memory_selection_rules.py  test_search_routing.py  test_stream_prompt_flow.py
tools/: capture_hiyori_action_frames.py  check_live2d_page.py  export_promo_clips.py  generate_model_previews.py  generate_voice_pack.py  inspect_hit_target.py  inspect_top_drag_target.py  test_character_click.py  test_chat_history_restore.py  test_click_bubble_response.py  test_companion_state_logs.py  test_first_companion_creation.py  test_hiyori_action_module.py  test_hiyori_actions.py  test_region_hits.py  (+8 more)
(+82 files in other folders)
